--- a/test.html
+++ b/test.html
@@ -281,6 +281,7 @@ Answer the question(s) below to complete this Section and earn cubes!
         <li><a href="https://www.google.com/?client" accesskey="k">Home</a></li><br>
        <li> <a href="#welcome">Bug Bounty</a></li><br>
         <li><a href="../test2.html">Test</a></li>
+        <li><a href="index.html">index</a></li>
         <br>
         <li><a href="../test2.html#top">Thi is top section of the second Page</a><br></li> <!-- control+option+h-->>
         <li><a href="../test2.html#shadow">This is all about Pentest</a></li></ul></nav>
