--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="text.html">texthtml</a>
+    <a href="test.html">texthtml</a>
 </body>
 </html>
